correcao de requisitos 3 + tabela HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Lições Aprendidas</title>
 </head>
 <body>
+    
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
         <nav id="navegacao">
@@ -61,11 +62,31 @@
                 <p>Na Trybe adquiri muitos conhecimentos, desde desenvolimento pessoal tratando-se de soft skills, praticar o auto conhecimento aprimorando a inteligencia emocional entre outras; Nos últimos blocos e estudos relacionados ao "how-to-code" tive contato com Unix e Bash, também passando pelo git&github para versionamento e controle de código, aprendi também sobre os principais fundamentos da internet e como ela funciona! e ainda tem muito mais por vir. | ⚔Muito a aprender você ainda tem!⚔ - "Yoda, the master" |</p>
             </article>
             <aside class="lado-direito">
-                <h2 class="art-title">Sobre mim:</h2>
-                <p>Estudei e fiz diversos cursos no meio deste mar de informações que é a área de TI, acabei me perdendo! Acabei conhecendo Trybe, que é o meu norte neste mar!</p>
+                <div>
+                    <h2 class="art-title">Autoconhecimento e Estudos</h2>
+                    <p>Nestes últimos módulos de estudo vi a importância de criar "abstração" para um melhor entendimento de um problema. Abstraindo ainda mais, posso dizer que outo conhecimento é a chave para uma mente saudável!</p>
+                </div>
+                <div class=tabelajs>
+                    <table>
+                        <caption><strong>Nivel de intimidade</strong></caption>
+                        <tr>
+                            <th>Unix&Bash</th>
+                            <th>Git&Github</th>
+                            <th>HTML</th>
+                            <th>CSS</th>
+                        </tr>
+                        <tr>
+                            <td>✢✢✢</td>
+                            <td>✢✢✢✢</td>
+                            <td>✢✢✢✢</td>
+                            <td>✢✢</td>
+                        </tr>
+                    </table>
+                </div>
             </aside>
-        </section>
-    </main>
+            </section>
+        </main>
+    </div>
     <footer id="rodape">
         <p><em><strong>Lucio Silva</strong> - All Rights Reserved</p></em>
     </footer>
