--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <h id=""></h>
-
-  <h1 id="cabecalho">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
+  <head> <h1 id="cabecalho">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1> </head>
   <a href="https://github.com/otacisos" target="_blank">Github</a>
   </head>
   <img id="minha_foto" src="miau.jpg">
