Realizado ajuste no estilo e requisitos 8, 9 e 15.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Lições Aprendidas</h1>
+        <h1 id="titulo">Lições Aprendidas - Trybe</h1>
         <nav id="menu">
             <ul>
                 <li><a href="#pagina-principal">Sobre</a></li>
-                <li><a href="#licoes_aprendidas">Aprendizado</a></li>
+                <li><a href="#linkedin-icone">Liçoes</a></li>
+                <li><a href="#lado-esquerdo">Aprendizado</a></li>
             </ul>
         </nav>
     </header>
@@ -67,16 +68,15 @@
         </article>
         <article id="lado-esquerdo">
             <section>
-                <h2>Meu Aprendizado</h2>
-                <p>No dia 9 de novembro iniciei minha jornada na Trybe, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado. 
-                <p>Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet, HTML e CSS. Realizamos a criação da primeiras páginas HTML, que são o primeiro passo para se tornar um desenvolvedor web full stack.</p>               
+                <h2> Aprendizado</h2>
+                <p>No dia 9 de novembro iniciei minha jornada na Trybe, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado. Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet,e realizamos a criação das primeiras páginas web utilizando HTML e CSS.</p>               
             </section>
         </article>
         <aside id="lado-direito">
             <h2>Hard e Soft Skills</h2>
             <p>No inicio do curso somos apresentados aos termos hard skills (capacitações técnicas) e soft skills (habilidades comportamentais). Aprendemos que as habilidades comportamentais são tão importantes quanto as técnicas, e que é necessário um treinamento continuo para ambas.</p>
         </aside>
-        <aside id="lado-direito-tabela">
+        <section id="lado-direito-tabela">
             <table>
                 <h3>Exemplos de Hard/Soft Skills</h3>
                 <tr>
@@ -96,10 +96,10 @@
                     <td>Colaboração</td>
                 </tr>
             </table>
-        </aside>
+        </section>
     </main>
     <footer id="rodape">
-        <p>Todos os direitos reservados, <a href="https://www.linkedin.com/in/felipe-silva-rocha/">Felipe Rocha</a></p>
+        <p>Desenvolvido por <a href="https://www.linkedin.com/in/felipe-silva-rocha/">Felipe Rocha</a>, todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
