--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
         <header>
             <h2>O meu aprendizado na Trybe</h2>
         </header>
-        <p>Muito alem de adquirir uma nova habilidade o aprendizado na Trybe proporciona um modelo de formação inovador e disruptivo. 
-            São rotinas que impulsionam o ânimo turma, tornam o estudo algo muito mais prazeroso e que geram resultados incríveis. 
-            Essa metodologia nos coloca como protagonistas e responsáveis por nosso próprio aprendizado, uma educação ativa que acontece 
+        <p>Muito alem de adquirir uma nova habilidade o aprendizado na Trybe proporciona um modelo de formação inovador e disruptivo.-
+            São rotinas que impulsionam o ânimo turma, tornam o estudo algo muito mais prazeroso e que geram resultados incríveis.-
+            Essa metodologia nos coloca como protagonistas e responsáveis por nosso próprio aprendizado, uma educação ativa que acontece-
             através de diversos exercícios, projetos, dinâmicas e muitos outros formatos.</p>
     </article>
+    <aside>
+        <h3>Indo Alem</h3>
+        <h4>Lições para o desenvolvimento pessoal - Empatia</h4>
+        <p>A empatia é definida como a capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar 
+            com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui na gestão de equipes 
+            alem de influenciar positivamente no clima organizacional.</p>
+    </aside>
     <footer id="rodape">
         Project Lessons Learned - SD09
         <a href="https://www.linkedin.com/in/micaelaalves/" target="_blank">Micaela Alves</a>
