--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           alt="Foto de perfil de Luiz Vicentin"
         />
         <h2>Luiz Fernando Vicentin</h2>
+        <a href="https://www.betrybe.com/" target="_blank"><h3>Trybe</h3></a>
       </section>
       <section>
         <h3>Lições Aprendidas</h3>
@@ -56,9 +57,7 @@
           <li>React</li>
         </ul>
       </section>
-      <section class="articles">
-        <article class="article">
-          <a href="https://www.betrybe.com/" target="_blank"><h3>Trybe</h3></a>
+      <article class="article">
           <h4>Aprendizado até aqui.</h4>
           <p>
             O Grupo, a Equipe, a ESCOLA Trybe é algo diferenciado, algo que so
@@ -69,9 +68,9 @@
             minhas perguntas mudaram, minha visão mudou, minha experiencia
             mudou, e eu só tenho a agradecer por isso!
           </p>
+          <p>A Trybe é uma escola que na sua metodologia de ensino provoca nos seus alunos uma experiência real do dia-a-dia de um programador de software</p>
         </article>
-      </section>
-      <section>
+     <section>
         <aside class="aside">
           <h4>Uma rápida passagem...</h4>
           <p>
