requisitos 14 alteracao do tamanho letra cores espacamento das linhas e font

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header id="cabecalho">
-    <nav id="titulo">
-      <title><h1>Perycles F.</h1></title>
+    <nav>
+      <h1 id="titulo">Perycles F.</h1>
     </nav>
   </header>
   <section class="imagem">
