Requisito 6 typo fix

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       </section>
     </main>
     <footer id="rodape">
-        <p>Criado por <a href="https://www.linkedin.com/in/kevincfraga/" target="_blanc">Kevin Fraga</a>. </p>
+        <p>Criado por <a href="https://www.linkedin.com/in/kevincfraga/" target="_blank">Kevin Fraga</a>. </p>
     </footer>
   </body>
 </html>
