Barra superior com um título Fix6

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <head> <h1 id="cabecalho">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1> </head>
+  <nav id="cabecalho">
+  <head id="titulo"> <h1>Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1> </head>
   <a href="https://github.com/otacisos" target="_blank">Github</a>
+  </nav>
   </head>
   <img id="minha_foto" src="miau.jpg">
+  
 
 </body>
 
