--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned</h1>
         <nav id="nav-link">
-            <a class="link" href="https://www.linkedin.com/in/ggaldino95/" target="_blank"><span class=" fa icon fa-linkedin"></span> LinkedIn</a>
-            <a class="link" href="https://github.com/GGaldino95" target="_blank"><span class="icon fa fa-github"></span> GitHub</a>
+            <a class="link" href="https://www.linkedin.com/in/ggaldino95/" target="_blank"><span
+                    class=" fa icon fa-linkedin"></span> LinkedIn</a>
+            <a class="link" href="https://github.com/GGaldino95" target="_blank"><span class="icon fa fa-github"></span>
+                GitHub</a>
         </nav>
     </header>
     <main id="conteudo">
-        <section id="box">
-            <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
-        </section>
-        <div id="list-box">
+        <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
+        <div id="content-box">
             <table id="table">
                 <tr>
                     <th>Nome:</th>
@@ -35,40 +35,8 @@
                     <td>09</td>
                 </tr>
             </table>
-            <section id ="box2">
-                <h2>Lições Aprendidas:</h2>
-                <ol id="licoes_aprendidas">
-                    <li>Fundamentos do Desenvolvimento Web</li>
-                    <li>Introdução - Unix & Shell</li>
-                    <li>Unix & Bash</li>
-                    <li>Git & GitHub - <em>O que é e pra que serve?</em></li>
-                    <li>Git & GitHub - <em>Entendendo comandos</em></li>
-                    <li>Fundamentos da Internet - <em>Como ela funciona?</em></li>
-                    <li>HTML & CSS - Estrutura de Página</li>
-                    <li>HTML & CSS - Iniciando com CSS</li>
-                    <li>HTML & CSS - Seletores e Posicionamento</li>
-                    <li>HTML Semântico</li>
-                </ol>
-            </section>
-            <section id="box3">
-                <h2>Lições que desejo aprender ainda:</h2>
-                <ul id="licoes_a_aprender">
-                    <li>Javascript</li>
-                    <li>React</li>
-                    <li>Metodologias Ágeis</li>
-                    <li>Redux</li>
-                    <li>SQL</li>
-                    <li>MongoDB</li>
-                    <li>NodeJS</li>
-                    <li>Frameworks</li>
-                    <li>Python</li>
-                    <li>Soft Skills</li>
-                </ul>
-            </section>
-        </div>
-        <h2>Trajetória - <em>A New Hope</em></h2>
-        <section>
             <article id="artigo">
+                <h2>Trajetória - <em>A New Hope</em></h2>
                 <p>
                     <span id="sw"><em>Numa galáxia não muito distante...</em></span><br><br>
                     Lá estava eu, começando meus estudos na TRYBE, com um baita aperto no coração
@@ -80,9 +48,7 @@
                     Tamo junto galera! <strong>#VQV</strong>
                 </p>
             </article>
-        </section>
-        <section>
-            <aside id="secao">
+            <aside id="aside">
                 <p>
                     <span class="highlight-word">FUN FACT:</span><br>
                     Faltando uns 40 minutos pro primeiro dia de reunião da Turma 09 (09/11/2020), meu
@@ -91,6 +57,36 @@
                     o notebook nesse meio tempo. Pensa na adrenalina...
                 </p>
             </aside>
+        </div>
+        <section class="box">
+            <h2>Lições Aprendidas:</h2>
+            <ol id="licoes_aprendidas">
+                <li>Fundamentos do Desenvolvimento Web</li>
+                <li>Introdução - Unix & Shell</li>
+                <li>Unix & Bash</li>
+                <li>Git & GitHub - <em>O que é e pra que serve?</em></li>
+                <li>Git & GitHub - <em>Entendendo comandos</em></li>
+                <li>Fundamentos da Internet - <em>Como ela funciona?</em></li>
+                <li>HTML & CSS - Estrutura de Página</li>
+                <li>HTML & CSS - Iniciando com CSS</li>
+                <li>HTML & CSS - Seletores e Posicionamento</li>
+                <li>HTML Semântico</li>
+            </ol>
+        </section>
+        <section class="box">
+            <h2>Lições que desejo aprender ainda:</h2>
+            <ul id="licoes_a_aprender">
+                <li>Javascript</li>
+                <li>React</li>
+                <li>Metodologias Ágeis</li>
+                <li>Redux</li>
+                <li>SQL</li>
+                <li>MongoDB</li>
+                <li>NodeJS</li>
+                <li>Frameworks</li>
+                <li>Python</li>
+                <li>Soft Skills</li>
+            </ul>
         </section>
     </main>
     <footer id="rodape">
