Realizado ajuste no estilo e requisitos 8, 9 e 15.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="#pagina-principal">Sobre</a></li>
                 <li><a href="#linkedin-icone">Liçoes</a></li>
-                <li><a href="#lado-esquerdo">Aprendizado</a></li>
+                <li><a href="#aprendizado">Aprendizado</a></li>
             </ul>
         </nav>
     </header>
@@ -27,13 +27,13 @@
             Bacharel em Ciência da Computação | Faculdade Pitagoras<br>
             Belo Horizonte - MG</p>
             <div id="github-icone">
-                <a href="https://github.com/feliperocha-dev" target="_blank"><img class="icone" src="github.png" alt="Logo Github"><br>GitHub</a>
+                <a class="url_icone" href="https://github.com/feliperocha-dev" target="_blank"><img class="icone" src="github.png" alt="Logo Github"><br>GitHub</a>
             </div>
             <div id="linkedin-icone">
-                <a  href="https://www.linkedin.com/in/felipe-silva-rocha/" target="_blank"><img class="icone" src="linkedin.png" alt="Logo Linkedin"><br>Linkedin</a>                
+                <a  class="url_icone" href="https://www.linkedin.com/in/felipe-silva-rocha/" target="_blank"><img class="icone" src="linkedin.png" alt="Logo Linkedin"><br>Linkedin</a>                
             </div>
         </section>
-        <article id="listas">
+        <section id="listas">
             <h2>Lições</h2>
             <div id="titulo_licoes_aprendidas">
                 <h3>Lições Aprendidas</h3>
@@ -65,16 +65,16 @@
                 <li>Python</li>
                 <li>Unit Tests</li>
             </ul>
-        </article>
-        <article id="lado-esquerdo">
+        </section>
+        <article  id="aprendizado" class="lado-esquerdo">
             <section>
                 <h2> Aprendizado</h2>
                 <p>No dia 9 de novembro iniciei minha jornada na Trybe, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado. Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet,e realizamos a criação das primeiras páginas web utilizando HTML e CSS.</p>               
             </section>
         </article>
-        <aside id="lado-direito">
+        <aside class="lado-direito">
             <h2>Hard e Soft Skills</h2>
-            <p>No inicio do curso somos apresentados aos termos hard skills (capacitações técnicas) e soft skills (habilidades comportamentais). Aprendemos que as habilidades comportamentais são tão importantes quanto as técnicas, e que é necessário um treinamento continuo para ambas.</p>
+            <p>No inicio do curso somos apresentados aos termos hard skills (capacitações técnicas) e soft skills (habilidades comportamentais). Aprendemos que soft skills também são importantes, e que é necessário um treinamento continuo para ambas.</p>
         </aside>
         <section id="lado-direito-tabela">
             <table>
