(10) requisito - tornando o site mais acessivel

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
+        <nav>
+            <a href="#cabecalho">Home</a>
+            <a href="#main">Main</a>
+            <a href="#rodape">About</a>
+        </nav>
     </header>
     <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Micaela">
+    <section id="main">
     <h2>Lições aprendidas</h2>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
@@ -45,11 +51,12 @@
             Essa metodologia nos coloca como protagonistas e responsáveis por nosso próprio aprendizado, uma educação ativa que acontece-
             através de diversos exercícios, projetos, dinâmicas e muitos outros formatos.</p>
     </article>
-    <aside>
+    </section>
+    <aside id="secao_lateral">
         <h3>Indo Alem</h3>
         <h4>Lições para o desenvolvimento pessoal - Empatia</h4>
-        <p>A empatia é definida como a capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar 
-            com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui na gestão de equipes 
+        <p>A empatia é definida como a capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar-
+            com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui na gestão de equipes-
             alem de influenciar positivamente no clima organizacional.</p>
     </aside>
     <footer id="rodape">
