--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Lições Aprendidas - Trybe</h1>
+        <h1 id="titulo">LIÇÕES APRENDIDAS - TRYBE</h1>
         <nav id="menu">
             <ul>
                 <li><a href="#pagina-principal">Sobre</a></li>
@@ -69,7 +69,7 @@
         <article  id="aprendizado" class="lado-esquerdo">
             <section>
                 <h2> Aprendizado</h2>
-                <p>No dia 9 de novembro iniciei minha jornada na Trybe, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado. Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet,e realizamos a criação das primeiras páginas web utilizando HTML e CSS.</p>               
+                <p>No dia 9 de novembro iniciei minha jornada na Trybe, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, que fornece um modelo de pagamento de sucesso compartilhado. Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet,e realizamos a criação das primeiras páginas web utilizando HTML e CSS.</p>               
             </section>
         </article>
         <aside class="lado-direito">
