--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
 </head>
 <body>
   <nav id="cabecalho">
-  <head id="titulo"> <h1>Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1> </head>
+  <head> <h1 class="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1> </head>
   <a href="https://github.com/otacisos" target="_blank">Github</a>
   </nav>
   </head>
   <img id="minha_foto" src="miau.jpg">
-  
+  <article>
+    <p>
+        Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
+      Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
+      sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura, pois a
+      proporção do sangue não pode ser maior que um para um milhão. Entretanto, não tenho dúvida
+      de que obteremos a reação característica.
+    </p>
+  </article>
+
 
 </body>
 
