Estiliza as listas e paragrafos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </nav>
             <img id="minha_foto"src="Minha_Foto.jpg"alt="Uma foto minha">
             <h2>Lista de lições</h2>
-            <ol id="licoes_aprendidas">
+            <ol id="licoes_aprendidas" class="lado-esquerdo">
                 <li>Unix</li>
                 <li>Bash</li>
                 <li>Git</li>
@@ -31,7 +31,7 @@
                 <li>Slack</li>
                 <li>Zoom</li>
             </ol>
-            <ul id="licoes_a_aprender">
+            <ul id="licoes_a_aprender" class="lado-direito">
                 <li>JavaScript</li>
                 <li>CSS Flexbox</li>
                 <li>Jest</li>
@@ -43,11 +43,11 @@
                 <li>Mongo</li>
                 <li>NodeJS</li>
             </ul>
-            <article>
+            <article id="artigo">
                 <h2>Meu Aprendizado</h2>
                 <p>Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado </p>
             </article>
-            <aside>
+            <aside id="secao">
                 <p>Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado </p>
             </aside>
             <footer id="rodape">
