--- a/index.html
+++ b/index.html
@@ -57,30 +57,7 @@
           <li>React</li>
         </ul>
       </section>
-      <article class="article">
-          <h4>Aprendizado até aqui.</h4>
-          <p>
-            O Grupo, a Equipe, a ESCOLA Trybe é algo diferenciado, algo que so
-            vivendo pra saber! Desculpa por isso, não dá para resumir o tanto
-            que aprendemos e nos desenvolvemos em menos de 1 mes!! Aquecimento,
-            Dinámicas, Aula ao Vivo, Feedbacks, Fechamento, .. eeee Projeto!! É
-            demais!!! E hoje, depois de terminar o Primeiro Projeto da Trybe,
-            minhas perguntas mudaram, minha visão mudou, minha experiencia
-            mudou, e eu só tenho a agradecer por isso!
-          </p>
-          <p>A Trybe é uma escola que na sua metodologia de ensino provoca nos seus alunos uma experiência real do dia-a-dia de um programador de software</p>
-        </article>
-     <section>
-        <aside class="aside">
-          <h4>Uma rápida passagem...</h4>
-          <p>
-            A viagem de aprendizagem é interminável, ninguém lhe ensina
-            realmente como aprender. O foco está sobretudo no que aprender. Mas
-            Aprender a Aprender é crucial se você quiser ir longe.
-          </p>
-        </aside>
-      </section>
-      <section>
+      <section id="genios">
         <h3>Genios Inventores</h3>
         <table>
           <tr>
@@ -105,6 +82,33 @@
           </tr>
         </table>
       </section>
+      <div class="lados">
+        <article class="lado-esquerdo">
+          <h4>Aprendizado até aqui.</h4>
+          <p>
+            O Grupo, a Equipe, a ESCOLA Trybe é algo diferenciado, algo que so
+            vivendo pra saber! Desculpa por isso, não dá para resumir o tanto
+            que aprendemos e nos desenvolvemos em menos de 1 mes!! Aquecimento,
+            Dinámicas, Aula ao Vivo, Feedbacks, Fechamento, .. eeee Projeto!! É
+            demais!!! E hoje, depois de terminar o Primeiro Projeto da Trybe,
+            minhas perguntas mudaram, minha visão mudou, minha experiencia
+            mudou, e eu só tenho a agradecer por isso!
+          </p>
+          <p>
+            A Trybe é uma escola que na sua metodologia de ensino provoca nos
+            seus alunos uma experiência real do dia-a-dia de um programador de
+            software
+          </p>
+        </article>
+        <aside class="lado-direito">
+          <h4>Uma rápida passagem...</h4>
+          <p>
+            A viagem de aprendizagem é interminável, ninguém lhe ensina
+            realmente como aprender. O foco está sobretudo no que aprender. Mas
+            Aprender a Aprender é crucial se você quiser ir longe.
+          </p>
+        </aside>
+      </div>
     </main>
     <footer id="rodape">
       <p>
