melhorando css da pagina, adicioando link para o linkedin

--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
   <body>
     <header id="cabecalho">
       <h1 id="titulo">Lições aprendidas - Trybe!</h1>
-
       <nav>
-        <ul>
-          <li><a href="#">Página inicial</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Contato</a></li>
-        </ul>
+        <a href="#">Página inicial</a>
+        <a href="#">Sobre</a>
+        <a href="#">Contato</a>
       </nav>
     </header>
+
     <main>
       <figure>
         <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto" />
       </figure>
-      <section>
-        <a
-          id="link_github"
-          href="https://github.com/GabriellCastro"
-          target="_blank"
-          >Meu Github 👈</a
-        >
-      </section>
+
+      <a
+        id="link_github"
+        href="https://github.com/GabriellCastro"
+        target="_blank"
+        >Meu Github 👈</a
+      >
+      <a
+        id="link_github"
+        href="https://www.linkedin.com/in/eugabrielcastro/"
+        target="_blank"
+        >Linkedin 👈</a
+      >
+
       <section>
         <table>
           <ol id="licoes_aprendidas">
@@ -60,6 +64,7 @@
           </ul>
         </table>
       </section>
+
       <article>
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
