correçao - reajuste de tags para requisito 9

--- a/index.html
+++ b/index.html
@@ -52,13 +52,15 @@
             através de diversos exercícios, projetos, dinâmicas e muitos outros formatos.</p>
     </article>
     </section>
-    <aside id="secao_lateral">
-        <h3>Indo Alem</h3>
-        <h4>Lições para o desenvolvimento pessoal - Empatia</h4>
-        <p>A empatia é definida como a capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar-
-            com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui na gestão de equipes-
-            alem de influenciar positivamente no clima organizacional.</p>
-    </aside>
+    <section id="secao_lateral">
+        <aside>
+            <h3>Indo Alem</h3>
+            <h4>Lições para o desenvolvimento pessoal - Empatia</h4>
+            <p>A empatia é definida como a capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar-
+                com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui na gestão de equipes-
+                alem de influenciar positivamente no clima organizacional.</p>
+        </aside>
+    </section>
     <footer id="rodape">
         Project Lessons Learned - SD09
         <a href="https://www.linkedin.com/in/micaelaalves/" target="_blank">Micaela Alves</a>
