--- a/index.html
+++ b/index.html
@@ -84,20 +84,14 @@
       </section>
       <div class="lados">
         <article class="lado-esquerdo">
-          <h4>Aprendizado até aqui.</h4>
+          <h4>Aprendizado</h4>
           <p>
-            O Grupo, a Equipe, a ESCOLA Trybe é algo diferenciado, algo que so
-            vivendo pra saber! Desculpa por isso, não dá para resumir o tanto
-            que aprendemos e nos desenvolvemos em menos de 1 mes!! Aquecimento,
-            Dinámicas, Aula ao Vivo, Feedbacks, Fechamento, .. eeee Projeto!! É
-            demais!!! E hoje, depois de terminar o Primeiro Projeto da Trybe,
-            minhas perguntas mudaram, minha visão mudou, minha experiencia
-            mudou, e eu só tenho a agradecer por isso!
-          </p>
-          <p>
-            A Trybe é uma escola que na sua metodologia de ensino provoca nos
-            seus alunos uma experiência real do dia-a-dia de um programador de
-            software
+            O Grupo, a Equipe, a Trybe é algo diferenciado, algo que só vivendo
+            pra saber! Não dá para resumir o que aprendemos e desenvolvemos em
+            menos de 1 mes!! Aquecimento, Dinámicas, Aula ao Vivo, Feedbacks,
+            Fechamento, .. eeee Projeto!! É demais!!! E hoje, depois de terminar
+            o Primeiro Projeto da Trybe, minhas perguntas mudaram, minha visão
+            mudou, minha experiencia mudou, e eu só tenho a agradecer por isso!
           </p>
         </article>
         <aside class="lado-direito">
