Mal conheço esse bot mas ja odeio ele por nao reconhecer meu <article>

--- a/index.html
+++ b/index.html
@@ -1,64 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <title>Lessons Learned - Projeto</title>
-</head>
-<body>
-    <header id="cabecalho">
-        <h1 id="titulo">Lessons Learned</h1>
-        <nav id="nav-link">
-            <a class="link" href="https://www.linkedin.com/in/ggaldino95/" target="_blank"><span
-                    class=" fa icon fa-linkedin"></span> LinkedIn</a>
-            <a class="link" href="https://github.com/GGaldino95" target="_blank"><span class="icon fa fa-github"></span>
-                GitHub</a>
-        </nav>
-    </header>
-    <main id="conteudo">
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
+        <title>Lessons Learned - Projeto</title>
+    </head>
+    <body>
+        <header id="cabecalho">
+            <h1 id="titulo">Lessons Learned</h1>
+        </header>
         <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
-        <div id="content-box">
-            <table id="table">
-                <tr>
-                    <th>Nome:</th>
-                    <td>Gabriel <span class="highlight-word">Gal</span>dino</td>
-                </tr>
-                <tr>
-                    <th>Idade:</th>
-                    <td>25</td>
-                </tr>
-                <tr>
-                    <th>Turma:</th>
-                    <td>09</td>
-                </tr>
-            </table>
-            <article id="artigo">
-                <h2>Trajetória - <em>A New Hope</em></h2>
-                <p>
-                    <span id="sw"><em>Numa galáxia não muito distante...</em></span><br><br>
-                    Lá estava eu, começando meus estudos na TRYBE, com um baita aperto no coração
-                    me perguntando: "Será que sou capaz?" "Vou dar conta disso?" <br>
-                    Eu só tenho a agrader por todo o suporte que a TRYBE dá para seus alunos, pois
-                    eles te deixam com a sensação de que você é capaz de tudo! <br><br>
-                    Desde como usar o Terminal do Linux até o ponto que estamos, a TRYBE tem dado
-                    uma experiência incrível. <br>
-                    Tamo junto galera! <strong>#VQV</strong>
-                </p>
-            </article>
-            <aside id="aside">
-                <p>
-                    <span class="highlight-word">FUN FACT:</span><br>
-                    Faltando uns 40 minutos pro primeiro dia de reunião da Turma 09 (09/11/2020), meu
-                    Lubuntu decidiu simplesmente não funcionar por alguma razão, e tive
-                    que às pressas fazer outro pendrive com Ubuntu e formatar
-                    o notebook nesse meio tempo. Pensa na adrenalina...
-                </p>
-            </aside>
-        </div>
-        <section class="box">
+        <nav>
+            <a href="https://www.linkedin.com/in/ggaldino95/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/GGaldino95" target="_blank">GitHub</a>
+        </nav>
+        <table id="table">
+            <tr>
+                <th>Nome:</th>
+                <td>Gabriel Galdino</td>
+            </tr>
+            <tr>
+                <th>Idade:</th>
+                <td>25</td>
+            </tr>
+            <tr>
+                <th>Turma:</th>
+                <td>09</td>
+            </tr>
+        </table>
+        <section>
             <h2>Lições Aprendidas:</h2>
             <ol id="licoes_aprendidas">
                 <li>Fundamentos do Desenvolvimento Web</li>
@@ -73,7 +43,7 @@
                 <li>HTML Semântico</li>
             </ol>
         </section>
-        <section class="box">
+        <section>
             <h2>Lições que desejo aprender ainda:</h2>
             <ul id="licoes_a_aprender">
                 <li>Javascript</li>
@@ -88,10 +58,21 @@
                 <li>Soft Skills</li>
             </ul>
         </section>
-    </main>
-    <footer id="rodape">
-        <em>Webiste desenvolvido por <span class="highlight-word">Gabriel Galdino</span>.
-            Todos os direitos reservados <span class="highlight-word">©</span>.</em>
-    </footer>
-</body>
+        <article>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas euismod tellus neque, at rhoncus magna sollicitudin ut.
+                Nam odio tellus, porttitor et sodales quis, dignissim faucibus nisl. Vestibulum facilisis, mauris nec vehicula consectetur,
+                nunc ex sodales est, venenatis convallis purus nisi ut mauris. Cras tempus risus eu nibh pretium porta.
+            </p>
+        </article>
+        <aside>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas euismod tellus neque, at rhoncus magna sollicitudin ut.
+                Nam odio tellus, porttitor et sodales quis, dignissim faucibus nisl.
+            </p>
+        </aside>
+        <footer id="rodape">
+            <em>Webiste desenvolvido por Gabriel Galdino. Todos os direitos reservados.</em>
+        </footer>
+    </body>
 </html>
