Alinha foto e tabela

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <title>Ana Luiza Machado: Lições aprendidas na Trybe</title>
 </head>
 
@@ -13,18 +15,35 @@
         <h1 id="titulo">Lições aprendidas na Trybe</h1>
     </header>
 
-<nav> 
+<nav>
     <ul>
-        <li> <a href="#minha foto">Página Inicial</a></li>
+        <li> <a href="#minha_foto">Página Inicial</a></li>
         <li> <a href="#licoes_aprendidas">Sobre o aprendizado</a></li>
         <li> <a href="#rodape">Contato</a></li>
     </ul>
 </nav>
 
 <main>
+    <section id="fotoetabela">
+        <img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado" height=170px>
+        <table id="tabela-conteudos">
+            <tr>
+                <td class="up-table table-hdivision table-vdivision">Fundamentos do Desenvolvimento Web</td>
+                <td class="up-table table-hdivision table-vdivision">Desenvolvimento Front-end</td>
+                <td class="up-table table-hdivision table-vdivision">Desenvolvimento                Back-end</td>
+                <td class="up-table table-hdivision">Ciência da Computação</td>
+            </tr>
+            <tr>
+                <td class="table-vdivision"><img src="check.jpg" alt="check mark" width=25px></td>
+                <td class="table-vdivision"><img src="loading.txt" alt="loading gif" width=150px></td>
+                <td class="table-vdivision"><img src="loading.txt" alt="loading gif" width=150px></td>
+                <td><img src="loading.txt" alt="loading gif" width=150px></td>
+            </tr>
+        </table>
+    </section>
+
     <section>
-        <img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado" width=20%>
-        <h2>Ana Luiza Machado Salgado</h2>
+        <h2 id="meu-nome">Ana Luiza Machado Salgado</h2>
     </section>
 
     <section>
@@ -54,20 +73,7 @@
             <li>SQL</li>
         </ul>
     </section>
-    
-    <table>
-        <tr>
-            <td class="up-table table-hdivision table-vdivision">Fundamentos do Desenvolvimento Web</td>
-            <td class="up-table table-hdivision table-vdivision">Desenvolvimento Front-end</td>
-            <td class="up-table table-hdivision table-vdivision">Desenvolvimento                Back-end</td>
-            <td class="up-table table-hdivision">Ciência da Computação</td>
-        </tr>
-        <tr>
-            <td class="table-vdivision"><img src="check.jpg" alt="check mark" width=25px></td>
-            <td class="table-vdivision"><img src="loading.txt" alt="loading gif" width=150px></td>
-            <td class="table-vdivision"><img src="loading.txt" alt="loading gif" width=150px></td>
-            <td><img src="loading.txt" alt="loading gif" width=150px></td>
-        </tr></table>
+
     <article>
         <h2>Rotina de Estudos</h2>
         <p>A rotina de estudos na <a href="https://www.betrybe.com/" target="_blank">Trybe</a> é baseada na metodologia ativa de ensino, portanto me responsabilizo pelo meu aprendizado.
@@ -79,12 +85,12 @@
     <aside>
         <h3>O aprendizado já começou no processo seletivo</h3>
         <p>Participar do processo seletivo da <a href="https://www.betrybe.com/" target="_blank">Trybe</a> foi uma experiência única e de muito aprendizado desde o começo, uma vez que nunca havia tido contato com programação ou desenvolvimento web.</p>
-        <p>Através do curso introdutório (disponibilizado após a inscrição), pude aprender o básico sobre JavaScript para realizar 3 desafios práticos propostos e seguir para a próxima etapa do processo, o teste de raciocínio lógico.</p>
+        <p>Através do curso introdutório (disponibilizado após a inscrição), pude aprender o básico sobre JS para realizar 3 desafios práticos propostos e seguir para a próxima etapa do processo, o teste de raciocínio lógico.</p>
     </aside>
 </main>
 
 <footer id="rodape">
-    <h4>Me encontre aqui:</h4>
+    <h4>Todos os direitos reservados, Ana Luiza Machado Salgado</h4>
     <a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank"><img src="linkedin.png" alt="Logo do LinkedIn" width=30px></a>
     <a href="https://github.com/analuizams" target="_blank"><img src="github.png" alt="Logo do GitHub" width=30px></a>
 </footer>
