Requisito 8 - estrutura e style + algumas correçoes no style

--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
         <h2 class="sub-titulo">Trybe Course</h2>
     </header>
     <main id="conteudo-principal">
-        <section class="secao-texto">
+        <section class="secao">
             <img src="eu-redondo.svg" id="minha_foto" alt="Foto de Diogenes de frente, sorrindo, com fundo branco">
+            <article id="sobre_aprendizado">
+                <h2 class="sub-titulo-article">Meu apredizado na Trybe</h2>
+                <p>Na Trybe, cada dia é um dia intenso. Venho crescendo como profissional e como pessoa, tudo ao mesmo tempo. Quando fala-se de aprendizado na Trybe é meio difícil de definir, pois não posso limita-me em dizes apenas de habilidades técnicas. Vai muito mais profundo. Estou aprendendo a ser uma pessoa que tem coerência no trabalho e no me relacionar, em ter empatia e simplicidade. Humildade em me colocar no lugar do outro e assim exercer o meu trabalho de forma muito mais concreta e coesa. 
+                Logo, como está sendo o meu aprendizado?  Profundo, transformador, original, concreto e direto.</p>
+            </article>
         </section>
     </main>
 </body>
