correçao reduçao do tamanho da seçao aside - requisito 9

--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
     </section>
     <section id="secao_lateral">
         <aside>
-            <h3>Indo Alem</h3>
-            <h4>Lições para o desenvolvimento pessoal - Empatia</h4>
-            <p>A empatia é definida como a capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar-
+            <h4>Empatia</h4>
+            <p>A capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar-
                 com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui na gestão de equipes-
-                alem de influenciar positivamente no clima organizacional.</p>
+                e influencia positivamente o clima organizacional.</p>
         </aside>
     </section>
     <footer id="rodape">
