--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header id="cabecalho">
     <h1 id="titulo">
-      Lições Aprendidas - Trybe :)
+      Lições Aprendidas - Trybe
     </h1>
     <nav>
       <ul>
@@ -19,35 +19,43 @@
     </nav>
   </header>
   <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/66654653?s=460&u=c99615034de62600eda9617441035c26fe045751&v=4" alt="Foto do Marcus">
-  <article>
-    Deixarei aqui um breve resumo sobre meu começo na Trybe. Depois de muito desânimo com a minha vida profissional, resolvi finalmente partir para uma área que gosto muito, e para minha alegria pude estudar aqui na Trybe,  que além de capacitar tecnicamente seus estudantes, os ajuda a desenvolver habilidades sócio comportamentais, e isso fez ficar ainda mais animado com o método de ensino que eles praticam. Acredito que devido ao processo seletivo da Trybe.
-  </article>
-  <section>
-    <ol id="licoes_aprendidas">
-      <li>Unix & Bash</li>
-      <li>Internet</li>
-      <li>Git</li>
-      <li>GitHub</li>
-      <li>Estrutura de páginas HTML & CSS</li>
-      <li>Seletore e posicionamento</li>
-      <li>HTML semântico</li>
-      <li>Zoom</li>
-      <li>Slack</li>
-      <li>inteligência emocional</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-      <li>CSS responsivos</li>
-      <li>JavaScript</li>
-      <li>Forms</li>
-      <li>React</li>
-      <li>Testes automatizados</li>
-      <li>Node</li>
-      <li>SQL</li>
-      <li>Mongo</li>
-      <li>Express</li>
-      <li>Algoritmos e estrutura de dados</li>
-    </ul>
-  </section>
+  <div class="lado-esquerdo">
+    <article>
+      Deixarei aqui um breve resumo sobre meu começo na Trybe. Depois de muito desânimo com a minha vida profissional, resolvi finalmente partir para uma área que gosto muito, e para minha alegria pude estudar aqui na Trybe,  que além de capacitar tecnicamente seus estudantes, os ajuda a desenvolver habilidades sócio comportamentais, e isso fez ficar ainda mais animado com o método de ensino que eles praticam. Acredito que devido ao processo seletivo da Trybe.
+    </article>
+  </div>
+  <div class="lado-direito">
+    <section id="list_container">
+      <div class="listas">
+        <ol id="licoes_aprendidas">
+          <li>Unix & Bash</li>
+          <li>Internet</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Estrutura de páginas HTML & CSS</li>
+          <li>Seletore e posicionamento</li>
+          <li>HTML semântico</li>
+          <li>Zoom</li>
+          <li>Slack</li>
+          <li>inteligência emocional</li>
+        </ol>
+      </div>
+      <div class="listas">
+        <ul id="licoes_a_aprender">
+          <li>CSS responsivos</li>
+          <li>JavaScript</li>
+          <li>Forms</li>
+          <li>React</li>
+          <li>Testes automatizados</li>
+          <li>Node</li>
+          <li>SQL</li>
+          <li>Mongo</li>
+          <li>Express</li>
+          <li>Algoritmos e estrutura de dados</li>
+        </ul>
+      </div>
+    </section>
+  </div>
   <section>
     <aside>
       Só um dos vários momentos na trybe. Enquanto eu realizava um dos exercícios propostos, o código simplesmente parou funcionar, orei para pelo menos três santos diferentes, até que um me iluminou, eu havia esquecido de fechar um dos parênteses.
@@ -56,8 +64,33 @@
   <section>
     <p>Link para acessar meu perfil no <a href="https://github.com/marcusWittho" target="_blank">GitHub</a> e acompanhar meu desenvolvimento durante o curso.</p>
   </section>
-  <footer id="rodape">
-    Desenvolvido especialmente por Marcus Lima Witthoeft.
-  </footer>
+  <table>
+    <tr>
+      <th>Alguns Tópicos Futuros</th>
+    </tr>
+    <tr>
+      <td>JavaScript</td>
+    </tr>
+    <tr>
+      <td>Testes Automatizados</td>
+    </tr>
+    <tr>
+      <td>React</td>
+    </tr>
+    <tr>
+      <td>SQL</td>
+    </tr>
+    <tr>
+      <td>MongoDB</td>
+    </tr>
+    <tr>
+      <td>NodeJs</td>
+    </tr>
+  </table>
 </body>
+<footer id="rodape">
+  <p>
+    Desenvolvido especialmente por Marcus Lima Witthoeft.
+  </p>
+</footer>
 </html>
