Possuir um rodapé

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title id="titulo"> Projeto Trybe</title>
+  <title> Projeto Trybe</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
+
 <body>
-  <nav id="cabecalho">
-  <head> <h1 class="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1> </head>
+  <nav>
+  <head id="cabecalho"> <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1> </head>
   <a href="https://github.com/otacisos" target="_blank">Github</a>
   </nav>
   </head>
@@ -21,6 +22,9 @@
       de que obteremos a reação característica.
     </p>
   </article>
+  <footer id="rodape">Rodapé</footer>
+
+  </footer>
 
 
 </body>
