Artigo em construçao e img tkd add

--- a/index.html
+++ b/index.html
@@ -45,6 +45,26 @@
         <li>Gerenciamento de estado com Redux</li>
       </ul>
     </div>
+    <article id="artigo_aprendizado">
+      <h2>Sobre meu aprendizado</h2>
+      <p>Desde criança, sempre gostei muito de tecnologia,  informática e artes marciais. Eu queria aprender a criar jogos e poder me divertir com eles, e ao mesmo tempo queria ser ator de filmes de artes marciais. Com 9 anos comecei a treinar TaeKwonDo. 
+      </p>
+      <p>
+        Como eu sempre busquei abraçar oportunidades que me apareciam, aos 16 anos consegui uma bolsa de estudos no SENAI-Petrópolis, para estudar marcenaria. Termindo o curso de marcenaria, engrenei em outro curso também no SENAI de instalação elétrica predial.
+      </p>
+      <p>
+        Com 23 anos conquistei a faixa preta, 1°Dan em TaeKwonDo. 
+      </p>
+      <img id="img_tkd" src="./img/Cris e Mestre tuyop.jpg" alt="Cristiano chutando no ar e seu mestre a frente">
+      <p>Na fase adulta foi quando consegui ter meu primeiro contato com os estudos acadêmicos e me deparei com uma matéria chamada "Programação 1" no curso de Petróleo e Gás, o qual me formei em 2014.
+      </p>
+      <p>
+        Agora em 2020 me deparei com a oportunidade de estudar na Trybe e finalmente obter todo o conhecimento necessário para ingressar na tão sonhada profissão de programador.
+      </p>
+    </article>
+    <section>
+    
+    </section>
   </main>
   <footer id="rodape">
     <h6>Cristiano L Duarte</h6>
