--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Micaela">
-    <section id="main">
+    <main id="main">
     <h2>Lições aprendidas</h2>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
@@ -51,15 +51,13 @@
             Essa metodologia nos coloca como protagonistas e responsáveis por nosso próprio aprendizado, uma educação ativa que acontece-
             através de diversos exercícios, projetos, dinâmicas e muitos outros formatos.</p>
     </article>
-    </section>
-    <section id="secao_lateral">
-        <aside>
-            <h4>Empatia</h4>
-            <p>A capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar-
-                com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui na gestão de equipes-
-                e influencia positivamente o clima organizacional.</p>
+    </main>
+     <aside>
+        <h4>Empatia</h4>
+        <p>A capacidade de projetar a personalidade de alguém de maneira que seja possível se identificar-
+             com o outro e compreender o que este pensa e sente. No ambiente corporativo está virtude contribui-
+             na gestão de equipes e influencia positivamente o clima organizacional.</p>
         </aside>
-    </section>
     <footer id="rodape">
         Project Lessons Learned - SD09
         <a href="https://www.linkedin.com/in/micaelaalves/" target="_blank">Micaela Alves</a>
