--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <title>Projeto</title>
 </head>
 <body>
-  <header id="cabecalho">
-    <nav>
-      <h1 id="titulo">Perycles F.</h1>
-    </nav>
-  </header>
+  <nav id="cabecalho">
+    <h1 id="titulo">Perycles F.</h1>
+    <ul>
+      <a href="https://github.com/PeryclesReis"><i class="fab fa-github-alt"></i></a>
+      <a href="https://www.linkedin.com/in/perycles-floriano-45b177155/"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/peryclesreis/"><i class="fab fa-instagram"></i></a>
+    </ul>
+  </nav>
   <section class="imagem">
     <img id="minha_foto" src="./img1.jpg" alt="">
   </section>
   <main id="content">
     <section>
-      <div>
+      <div class="lado-esquerdo">
         <h2>Licoes aprendidas:</h2>
         <ol id="licoes_aprendidas">
           <li>Unix</li>
@@ -32,7 +36,7 @@
           <li>Soft Skill</li>
         </ol>
       </div>
-      <div>
+      <div class="lado-direito">
         <h2>Licoes a aprender:</h2>
         <ul id="licoes_a_aprender">
           <li>JavaScrit</li>
@@ -47,16 +51,16 @@
           <li>Estrutura de Dados</li>
         </ul>
       </div>
-      <a href="https://www.linkedin.com/in/perycles-floriano-45b177155/" target="_blank">Linkedin</a>
     </section>
     <section>
       <article id="article">
         <p>Bom o que dizer? Desde que iniciei os estudos na Trybe, tive muitas experiências boas de aprendizado, como utilizar o terminal e o git de forma eficiente e organizada para realizar meus trabalhos seculares e também as atividades da Trybe, compartilhar o conhecimento adquirido com meus colegas de turma e aprender também com eles assim desenvolvendo minhas soft skills.</p>
       </article>
+    
+      <aside id="aside">
+        <p>Realmente empolgante, antes de começar não tinha muito noção de como utilizar o git e nem o terminal, mas agora, em questão de criar e navegar eu sei praticamente tudo com apenas duas semanas de aprendizado! Tope tope tope...</p>
+      </aside>
     </section>
-    <aside id="aside">
-      <p>Realmente empolgante, antes de começar não tinha muito noção de como utilizar o git e nem o terminal, mas agora, em questão de criar e navegar eu sei praticamente tudo com apenas duas semanas de aprendizado! Tope tope tope...</p>
-    </aside>
     <table id="tabela">
       <tr>
         <td>Alguma coisa aqui dentro!</td>
