--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Lições Aprendidas</title>
 </head>
 <body>
-    
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
         <nav id="navegacao">
@@ -19,74 +18,66 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <div class="imgbox">
-        <img id="minha_foto" src="https://user-images.githubusercontent.com/21299113/99570313-822e7e00-29b0-11eb-9806-e0cf7c4a3af1.png" alt="profile_picture">
-        <a href="https://github.com/LucioOSilva" target="_blank">Lucio Silva</a>
-        </div>
+        <main>
+            <div class="imgbox">
+                <img id="minha_foto" src="https://user-images.githubusercontent.com/21299113/99570313-822e7e00-29b0-11eb-9806-e0cf7c4a3af1.png" alt="profile_picture">
+                <a href="https://github.com/LucioOSilva" target="_blank">Lucio Silva</a>
+            </div>
+                <section class="more-info">
+                    <section class="licoes">
+                        <h2 class="art-title">Licões Aprendidas</h2>
+                        <ol id="licoes_aprendidas">
+                            <li>Fundamentos Web 🖥</li>
+                            <li>Unix & Bash 🐧</li>
+                            <li>Git & Github 🐱</li>
+                            <li>Internet 🌎</li>
+                            <li>HTML 🧾</li>
+                            <li>CSS 🔰</li>
+                            <li>Semantic HTML 🧾</li>
+                            <li>Slack & Zoom ✔</li>
+                            <li>Soft Skills 💞</li>
+                            <li>Emotional intelligence ☁</li>
+                        </ol>
+                    </section>
+                    <section class="licoes">
+                        <h2 class="art-title">Licões a Aprender</h2>
+                        <ul id="licoes_a_aprender">
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>NodeJS</li>
+                            <li>CSS (Responsive)</li>
+                            <li>Unit Tests</li>
+                            <li>SQL</li>
+                            <li>MongoDB</li>
+                            <li>DevOps</li>
+                            <li>Scrum</li>
+                            <li>Python3</li>
+                        </ul>
+                    </section>
+                </section>
             <section class="more-info">
-                <section class="licoes">
-                    <h2 class="art-title">Licões Aprendidas</h2>
-                    <ol id="licoes_aprendidas">
-                        <li>Fundamentos Web</li>
-                        <li>Unix & Bash</li>
-                        <li>Git & Github</li>
-                        <li>Internet</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Semantic HTML</li>
-                        <li>Slack & Zoom</li>
-                        <li>Soft Skills</li>
-                        <li>Emotional intelligence</li>
-                    </ol>
-                </section>
-                <section class="licoes">
-                    <h2 class="art-title">Licões a Aprender</h2>
-                    <ul id="licoes_a_aprender">
-                        <li>JavaScript</li>
-                        <li>React</li>
-                        <li>NodeJS</li>
-                        <li>CSS (Responsive)</li>
-                        <li>Unit Tests</li>
-                        <li>SQL</li>
-                        <li>MongoDB</li>
-                        <li>DevOps</li>
-                        <li>Scrum</li>
-                        <li>Python3</li>
-                    </ul>
-                </section>
-            </section>
-        <section class="more-info">
-            <article class="lado-esquerdo">
-                <h2 class="art-title">Um pouco sobre meu aprendizado (Trybe)</h2>
-                <p>Na Trybe adquiri muitos conhecimentos, desde desenvolimento pessoal tratando-se de soft skills, praticar o auto conhecimento aprimorando a inteligencia emocional entre outras; Nos últimos blocos e estudos relacionados ao "how-to-code" tive contato com Unix e Bash, também passando pelo git&github para versionamento e controle de código, aprendi também sobre os principais fundamentos da internet e como ela funciona! e ainda tem muito mais por vir. | ⚔Muito a aprender você ainda tem!⚔ - "Yoda, the master" |</p>
-            </article>
-            <aside class="lado-direito">
-                <div>
-                    <h2 class="art-title">Autoconhecimento e Estudos</h2>
-                    <p>Nestes últimos módulos de estudo vi a importância de criar "abstração" para um melhor entendimento de um problema. Abstraindo ainda mais, posso dizer que outo conhecimento é a chave para uma mente saudável!</p>
-                </div>
-                <div class=tabelajs>
-                    <table>
-                        <caption><strong>Nivel de intimidade</strong></caption>
-                        <tr>
-                            <th>Unix&Bash</th>
-                            <th>Git&Github</th>
-                            <th>HTML</th>
-                            <th>CSS</th>
-                        </tr>
-                        <tr>
-                            <td>✢✢✢</td>
-                            <td>✢✢✢✢</td>
-                            <td>✢✢✢✢</td>
-                            <td>✢✢</td>
-                        </tr>
-                    </table>
-                </div>
-            </aside>
+                <article class="lado-esquerdo">
+                    <h2 class="art-title">Meu aprendizado (Trybe)</h2>
+                    <p>Na Trybe adquiri muitos conhecimentos, desde desenvolimento pessoal tratando-se de soft skills, praticar o auto conhecimento aprimorando a inteligencia emocional entre outras; Nos últimos blocos e estudos relacionados ao "how-to-code" tive contato com Unix e Bash, também passando pelo git&github para versionamento e controle de código, aprendi também sobre os principais fundamentos da internet e como ela funciona! e ainda tem muito mais por vir. | ⚔Muito a aprender você ainda tem!⚔ - "Yoda, the master" |</p>
+                </article>
+                <aside class="lado-direito">
+                    <div>
+                        <h2 class="art-title">Mais</h2>
+                        <p>A Trybe pratica metodologia de estudos ativa! Com muito conteúdo e "hands-on"! #VQV</p>
+                    </div>
+                    <div class=tabelajs>
+                        <table>
+                            <tr>
+                                <th><a href="https://github.com/LucioOSilva">Github</a></th>
+                            </tr>
+                            <tr>
+                                <td><a href="https://lucioosilva.github.io/portfolio/"><strong>Portfolio</strong></a></td>
+                            </tr>
+                        </table>
+                    </div>
+                </aside>
             </section>
         </main>
-    </div>
     <footer id="rodape">
         <p><em><strong>Lucio Silva</strong> - All Rights Reserved</p></em>
     </footer>
