atualizaçoes - ajuste na foto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             <a href="#rodape">About</a>
         </nav>
     </header>
-    <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Micaela">
     <main id="main">
     <h2>Lições aprendidas</h2>
     <ol id="licoes_aprendidas">
@@ -59,8 +58,9 @@
              na gestão de equipes e influencia positivamente o clima organizacional.</p>
         </aside>
     <footer id="rodape">
-        Project Lessons Learned - SD09
+        Project Lessons Learned - SD09<br>
         <a href="https://www.linkedin.com/in/micaelaalves/" target="_blank">Micaela Alves</a>
+        <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Micaela">
     </footer>
 </body>
 </html>
